# OpenAPIQT

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
assets/: OpenAPIQT.pptx  Техническое задание.docx
openapiqt/app/: main_window.py
openapiqt/app/list_models/: path_list_model.py  schema_list_model.py
openapiqt/app/ui/: generated_yaml_ui.py
openapiqt/app/widgets/: generate_yaml.py  property_field.py
openapiqt/models/: components.py  info.py  media_type.py  operation.py  response.py  schema.py  tags.py
openapiqt/models/parsing/: __init__.py  json_parsing.py
swaggerqt/: main.py
swaggerqt/app/: generate_yaml.py  main_window.py  window.py
swaggerqt/app/list_models/: path_list_model.py  schema_list_model.py
swaggerqt/app/ui/: generated_yaml_ui.py  main_widget_ui.py  main_window_ui.py  schema_manager_ui.py
swaggerqt/app/widgets/: main_widget.py  property_field.py  schema_manager.py
swaggerqt/models/: __init__.py  components.py  external_docs.py  media_type.py  open_api.py  operation.py  paths.py  request_body.py  response.py  schema.py  server.py  tags.py
swaggerqt/models/parsing/: __init__.py  json_parsing.py  parsing.py
tests/: test.py  test_dynamic_creation.py  test_openapi.py  test_parser.py
