[tool.poetry]
name = "swaggerqt"
version = "0.1.0"
description = ""
authors = ["Arthur <baginian.artur@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.7.1"
PyYAML = "^6.0.2"
pydantic = "^2.9.2"
logging = "^0.4.9.6"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "^5.13.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 80
atomic = true
include_trailing_comma = true
use_parentheses = true
profile = "black"
lines_after_imports = 2
combine_as_imports = true
multi_line_output = 3

[tool.black]
line-length = 80
target-version = ['py312']

